<resources>
    <string name="app_name">StarWarsApp</string>
    <string name="start_button">GO!</string>
    <string name="text_top_activity">Druk op de knop om films te bekijken! Voeg deze aan je favorieten toe om ze later nog een te bekijken.</string>
    <string name="naam_film">Naam Film: </string>
    <string name="db_naam_film">Naam Film: </string>
    <string name="db_rating">Rating </string>
    <string name="rating">Rating </string>
    <string name="movie_overview">Movie Overview</string>
    <string name="db_overview">overview</string>
    <string name="action_settings">Settings</string>
    <string name="Favo_Button">Favorieten</string>
    <string name="section_format">Hello World from section: %1$d</string>
</resources>
